# langchain-demo

./: .gitignore  .pdm-python  .pythonpath.pth  README.md  env.py  langgraph.json  llm.py  pyproject.toml  requirment.txt  structure_response.py  test.py
src/agent/: agent_test.py  env.py  my_agent1.py  my_llm.py  pandasai_test.py  struct_res1.py  struct_res2.py
src/agent/scheme/: movie.py
src/agent/tool/: date_tool.py  web_search_tool.py  工具的定义.md
